--- a/_posts/2019-07-01-my-thesis.md
+++ b/_posts/2019-07-01-my-thesis.md
@@ -1,8 +1,6 @@
 ---
 layout: "post"
 author: "André Hatlo-Johansen"
-title: "Machine learning in an e-commercial business thesis"
+title: "Thesis: Machine learning in an e-commercial business"
 permalink: /:title/
 ---
-
-Hei!
