THIS IS THE FIX!

--- a/_posts/2019-01-07-my-thesis.md
+++ b/_posts/2019-01-07-my-thesis.md
@@ -1,8 +1,6 @@
 ---
 layout: "post"
 author: "André Hatlo-Johansen"
-title: "Projekt Nett Ansikt!"
+title: "Thesis: Machine learning in an e-commercial business"
 permalink: /:title/
 ---
-
-Hei!
