--- a/_posts/2019-01-01-lorem.md
+++ b/_posts/2019-01-01-lorem.md
@@ -2,7 +2,7 @@
 layout: single
 title: 'Lorem Ipsem'
 permalink: /lorem/ipsem/
-excerpt: "Lorem Ipsem s erat libero tristique tell
+excerpt: "Lorem Ipsem s erat libero tristique tell"
 ---
 
 Aenean id lacinia neque nec bibendum odio risus a arcu imperdiet metus id velit augue id magna iaculis quis, pretium quam iaculis quis, sit amet nibh ullamcorper nec, pretium quam nonummy ac, erat libero tristique tellus, turpis at pulvinar vulputate, sed nisl molestie nec bibendum odio risus erat libero tristique tellus, a arcu imperdiet pretium quam turpis at pulvinar vulputate, sit amet nibh rutrum non, pretium quam augue id magna ullamcorper nec, porttitor ut, porttitor ut, nec bibendum odio risus sit amet nibh sit amet ante.
