--- a/_posts/2022-03-21-vim-setup.md
+++ b/_posts/2022-03-21-vim-setup.md
@@ -4,8 +4,8 @@ title: "Vim - The ultimate text editor?"
 permalink: /vim-ultimate-text-editor/
 excerpt: "Testing vim for all my future projects"
 header:
-  image: "/assets/images/vim-banner.png"
-  teaser: "/assets/images/vim-banner.png"
+  image: "/assets/images/vim-banner.jpeg"
+  teaser: "/assets/images/vim-banner.jpeg"
 author_profile: false
 comments: false
 draft: false
